# Mitiscan

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  mitiscan.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  gitleaks.yml  release.yml  sbom.yml  scorecard.yml  stale.yml
core/: __init__.py  bootstrap.py  crashdump.py  engine.py  errors.py  evasion.py  logging.py  reporter.py  result.py  safety.py  scope.py  version.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  THREAT_MODEL.md  USAGE.md
gui/: __init__.py  app.py
modules/: __init__.py  modules.py
templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_errors.py  test_logging.py  test_safety.py  test_version.py
