[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitiscan"
version = "0.1.0"
description = "Automated VAPT platform — 35 modules, async orchestration, NIST SP 800-115 / OWASP reporting"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mitiscan contributors" }]
keywords = ["security", "vapt", "pentest", "scanner", "nist", "owasp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "customtkinter>=5.2.0",
  "jinja2>=3.1.0",
  "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "cyclonedx-bom>=4.0",
]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.urls]
Homepage      = "https://github.com/shrivastava67/Mitiscan"
Repository    = "https://github.com/shrivastava67/Mitiscan"
Issues        = "https://github.com/shrivastava67/Mitiscan/issues"
Changelog     = "https://github.com/shrivastava67/Mitiscan/blob/main/CHANGELOG.md"
Security      = "https://github.com/shrivastava67/Mitiscan/blob/main/SECURITY.md"
Documentation = "https://github.com/shrivastava67/Mitiscan/tree/main/docs"

[project.scripts]
mitiscan = "mitiscan:main"

[tool.setuptools]
py-modules = ["mitiscan"]

[tool.setuptools.packages.find]
include = ["core*", "gui*", "modules*"]
exclude = ["tests*", "docs*", "mitiscan_outputs*", "wordlists*"]

[tool.setuptools.package-data]
"*" = ["templates/*.j2", "templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["mitiscan_outputs", "wordlists"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "PIE", "RET", "SIM", "TCH"]
ignore = ["S603", "S607", "E501"]
per-file-ignores = { "tests/*" = ["S101"] }

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "slow: slow integration tests",
  "network: tests requiring network",
]

[tool.coverage.run]
branch = true
source = ["core", "gui", "modules", "mitiscan"]
omit = ["tests/*", "mitiscan_outputs/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

[tool.bandit]
exclude_dirs = ["tests", "mitiscan_outputs", "wordlists"]
skips = ["B404", "B603", "B607"]
